# gomi

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  Taskfile.yml  go.mod  go.sum
.github/workflows/: bootenv-release.yml  os-image-release.yml  release.yml
api/inventory/: types.go  types_test.go
bootenv/: .gitignore  Makefile  README.md  go.mod  go.sum  mkosi.conf
bootenv/bootenvs/: debian-live-standard-amd64.yaml  ubuntu-minimal-cloud-amd64.yaml
bootenv/scripts/: build  gomi-deploy-runner  render-manifest  test-build-script
cmd/gomi-hypervisor/: agent.go  agent_test.go  api_client.go  artifacts.go  cleanup.go  cleanup_test.go  decompress.go  files.go  files_test.go  main.go  types.go
cmd/gomi-osimage/: main.go
docs/: EPHEMERAL_IMAGE.md  MILESTONE.md
openapi/: openapi.yaml
tests/lab/ansible/: .gitignore  README.md  ansible.cfg  pyproject.toml
tests/lab/ansible/files/: gomi_kvm_lab_runner.py
tests/lab/ansible/group_vars/: all.yml
tests/lab/ansible/inventory/: hosts.yml
tests/lab/ansible/molecule/gomi-kvm-lab/: cleanup.yml  converge.yml  create.yml  destroy.yml  molecule.yml  vars.yml  verify.yml
tests/lab/ansible/molecule_plugins/qemu_kvm/: pyproject.toml
tests/lab/ansible/molecule_plugins/qemu_kvm/src/molecule_qemu_kvm/: __init__.py  driver.py  schema.json
tests/lab/ansible/playbooks/: cleanup-gomi-kvm-lab.yml  run-gomi-kvm-lab.yml
tests/lab/ansible/templates/: lab-config.json.j2
tests/lab/ansible/vars/: ubuntu-desktop.yml
tools/: upload-os-images.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
(+396 files in other folders)
